﻿
BrawlCrate - v0.26 Hotfix 1
Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.26 Hotfix 1 - (5/16/2019)
 . Fix issue where shaders could not be properly selected
 . Property grid no longer expands all items by default
 
 - BrawlCrate v0.26 - (5/16/2019)
 . Metal material generation should completely match Brawl
 . Metal Texture is now saved as a property and is used when generating metals (including using AutoMetal)
 . RTSC Entries now show slot # in their name
 . Shaders now parse with a space in their name
 . COLLADA dae files now serialize as v1.4.1 rather than v1.5.0
 . ".masq" is now a valid filetype
 . Property Grid now expands all submenus by default
 . Property Grid now saves position when switching between two objects of the same type
 . Fix texture rendering to match Brawl when previewing PAT0 animations
 . Fix crash bugs on model import
 . Add various additional shortcut keys
 . Improve organization and fix typos on Model Previewer
 . MDL0 Mirroring functions now properly update the preview
 . Improve text updating for entry names
 
 - BrawlCrate v0.25c - (5/3/2019)
 . Spawns and Respawns now render the spawn number on top of them
 . Rich presence now shows the BrawlCrate program title on the tooltip
 . Add auto-name materials option for MDL0